# opencoverage-web

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
opencoverage_web/: __init__.py  map_view.py  patterns.py  planning.py
opencoverage_web/views/: __init__.py  about.py  planner.py
