[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencoverage-web"
version = "0.1.0"
description = "Web UI for OpenCoverage UAV mission planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "opencoverage>=0.2.0",
    "streamlit>=1.36",
    "folium>=0.15",
    "streamlit-folium>=0.18",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["opencoverage_web"]

[tool.ruff]
line-length = 100
target-version = "py310"
